--- a/index.html
+++ b/index.html
@@ -107,11 +107,45 @@
 															</td>
 														</tr>
 													</table>
-													<table class="paragraph_block block-2" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+													<table class="divider_block block-2" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad" style="padding-bottom:10px;padding-left:10px;padding-right:10px;padding-top:20px;">
+																<div class="alignment" align="center">
+																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="75%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+																		<tr>
+																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 1px solid #dddddd;"><span style="word-break: break-word;">&#8202;</span></td>
+																		</tr>
+																	</table>
+																</div>
+															</td>
+														</tr>
+													</table>
+													<table class="paragraph_block block-3" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<tr>
+															<td class="pad">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:28px;">
+																	<p style="margin: 0;"><strong>콩팥을 위한 일상 속 건강 관리</strong></p>
+																</div>
+															</td>
+														</tr>
+													</table>
+													<table class="divider_block block-4" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad" style="padding-bottom:25px;padding-left:10px;padding-right:10px;padding-top:10px;">
+																<div class="alignment" align="center">
+																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="75%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+																		<tr>
+																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 1px solid #dddddd;"><span style="word-break: break-word;">&#8202;</span></td>
+																		</tr>
+																	</table>
+																</div>
+															</td>
+														</tr>
+													</table>
+													<table class="paragraph_block block-5" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
 																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:justify;mso-line-height-alt:28px;">
-																	<p style="margin: 0; margin-bottom: 24px;"><strong>콩팥을 위한 일상 속 건강 관리</strong></p>
 																	<p style="margin: 0; margin-bottom: 24px;">콩팥(Kidney), 이름처럼 콩과 팥을 닮은 장기.<br>한자로는 '신장(腎臟)'이라고도 불리지만,<br>요즘은 <strong>'콩팥'이라는 순우리말</strong>을 더 많이 사용합니다.<br>‘신부전’도 이제는 일상에서 ‘콩팥병’으로 부르는 추세입니다.</p>
 																	<p style="margin: 0;">&nbsp;콩팥, 얼마나 알고 계신가요?</p>
 																</div>
