--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 <head>
 	<title></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"><!--[if mso]>
-<xml><w:WordDocument xmlns:w="urn:schemas-microsoft-com:office:word"><w:DontUseAdvancedTypographyReadingMail/></w:WordDocument>
-<o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG/></o:OfficeDocumentSettings></xml>
-<![endif]-->
+	<meta name="viewport" content="width=900"><!-- 고정 해상도 설정 -->
 	<style>
+		.row-content {
+			width: 900px !important;
+			margin: 0 auto;
+		}
+
+		/* 모바일 반응형 비활성화 */
+		@media (max-width: 768px) {
+			.row-content {
+				width: 900px !important;
+			}
+
+			.stack .column {
+				width: 100% !important;
+				display: block !important;
+			}
+		}
+
 		* {
 			box-sizing: border-box;
 		}
@@ -29,7 +43,7 @@
 		}
 
 		p {
-			line-height: inherit
+			line-height: inherit;
 		}
 
 		.desktop_hide,
@@ -49,37 +63,9 @@
 			font-size: 75%;
 			line-height: 0;
 		}
-
-		@media (max-width:768px) {
-			.mobile_hide {
-				display: none;
-			}
-
-			.row-content {
-				width: 100% !important;
-			}
-
-			.stack .column {
-				width: 100%;
-				display: block;
-			}
-
-			.mobile_hide {
-				min-height: 0;
-				max-height: 0;
-				max-width: 0;
-				overflow: hidden;
-				font-size: 0px;
-			}
-
-			.desktop_hide,
-			.desktop_hide table {
-				display: table !important;
-				max-height: none !important;
-			}
-		}
-	</style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]--><!--[if true]><style>.forceBgColor{background-color: white !important}</style><![endif]-->
+	</style>
 </head>
+
 
 <body class="body forceBgColor" style="background-color: transparent; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
 	<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: transparent;">
@@ -129,25 +115,15 @@
 															</td>
 														</tr>
 													</table>
-													<table class="divider_block block-4" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+													<table class="divider_block block-4" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
-															<td class="pad" style="padding-bottom:25px;padding-left:10px;padding-right:10px;padding-top:10px;">
+															<td class="pad">
 																<div class="alignment" align="center">
 																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="75%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 																		<tr>
 																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 1px solid #dddddd;"><span style="word-break: break-word;">&#8202;</span></td>
 																		</tr>
 																	</table>
-																</div>
-															</td>
-														</tr>
-													</table>
-													<table class="paragraph_block block-5" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
-														<tr>
-															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:justify;mso-line-height-alt:28px;">
-																	<p style="margin: 0; margin-bottom: 24px;">콩팥(Kidney), 이름처럼 콩과 팥을 닮은 장기.<br>한자로는 '신장(腎臟)'이라고도 불리지만,<br>요즘은 <strong>'콩팥'이라는 순우리말</strong>을 더 많이 사용합니다.<br>‘신부전’도 이제는 일상에서 ‘콩팥병’으로 부르는 추세입니다.</p>
-																	<p style="margin: 0;">&nbsp;콩팥, 얼마나 알고 계신가요?</p>
 																</div>
 															</td>
 														</tr>
@@ -164,23 +140,65 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; color: #000000; border-radius: 0; width: 900px; margin: 0 auto;" width="900">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
 										<tbody>
 											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+												<td class="column column-1" width="25%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; border-left: 27px solid transparent; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; padding-top: 5px; vertical-align: top;">
+													<div class="spacer_block block-1" style="height:15px;line-height:15px;font-size:1px;">&#8202;</div>
+												</td>
+												<td class="column column-2" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
 													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="width:100%;">
+																<div class="alignment" align="left">
+																	<div style="max-width: 450px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/wqz/wxu/qb5/image%20418.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="450" alt title height="auto"></div>
+																</div>
+															</td>
+														</tr>
+													</table>
+													<div class="spacer_block block-2" style="height:1px;line-height:1px;font-size:1px;">&#8202;</div>
+												</td>
+												<td class="column column-3" width="25%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<div class="spacer_block block-1" style="height:60px;line-height:60px;font-size:1px;">&#8202;</div>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-3" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<tr>
+															<td class="pad">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:left;mso-line-height-alt:24px;">
+																	<p style="margin: 0; margin-bottom: 24px;">콩팥(Kidney), 이름처럼 콩과 팥을 닮은 장기.<br>한자로는 '신장(腎臟)'이라고도 불리지만,<br>요즘은 <strong>'콩팥'이라는 순우리말</strong>을 더 많이 사용합니다.<br>‘신부전’도 이제는 일상에서 ‘콩팥병’으로 부르는 추세입니다.</p>
+																	<p style="margin: 0;">&nbsp;콩팥, 얼마나 알고 계신가요?</p>
+																</div>
+															</td>
+														</tr>
+													</table>
+													<table class="image_block block-2" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad" style="padding-bottom:10px;padding-top:5px;width:100%;">
 																<div class="alignment" align="center">
 																	<div style="max-width: 289px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/oj5/07e/1ve/image%20416.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="289" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
 													</table>
-													<table class="paragraph_block block-2" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+													<table class="paragraph_block block-3" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:left;mso-line-height-alt:28px;">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:left;mso-line-height-alt:24px;">
 																	<p style="margin: 0; margin-bottom: 24px;">위치: 좌우 각각 1개씩, 횡격막 아래 등 쪽 복막 뒤</p>
 																	<p style="margin: 0; margin-bottom: 24px;">크기: 길이 약 11~12cm, 무게는 양쪽 합쳐 300g</p>
 																	<p style="margin: 0; margin-bottom: 24px;">모양: 강낭콩 형태</p>
