--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; color: #000000; width: 900px; margin: 0 auto;" width="900">
 										<tbody>
 											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top;">
 													<table class="button_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
-															<td class="pad" style="padding-bottom:15px;padding-left:10px;padding-right:10px;padding-top:15px;text-align:center;">
+															<td class="pad" style="text-align:center;">
 																<div class="alignment" align="center"><!--[if mso]>
-<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word"   style="height:100px;width:880px;v-text-anchor:middle;" arcsize="4%" fillcolor="#eefbff">
+<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word"   style="height:100px;width:900px;v-text-anchor:middle;" arcsize="4%" fillcolor="#eefbff">
 <v:stroke dashstyle="Solid" weight="0px" color="#eefbff"/>
 <w:anchorlock/>
 <v:textbox inset="0px,0px,0px,0px">
@@ -149,14 +149,13 @@
 												<td class="column column-2" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
 													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
-															<td class="pad" style="width:100%;">
+															<td class="pad" style="padding-bottom:15px;width:100%;">
 																<div class="alignment" align="left">
 																	<div style="max-width: 450px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/wqz/wxu/qb5/image%20418.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="450" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
 													</table>
-													<div class="spacer_block block-2" style="height:1px;line-height:1px;font-size:1px;">&#8202;</div>
 												</td>
 												<td class="column column-3" width="25%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
 													<div class="spacer_block block-1" style="height:60px;line-height:60px;font-size:1px;">&#8202;</div>
@@ -176,12 +175,44 @@
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
-													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+													<table class="button_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:left;mso-line-height-alt:24px;">
-																	<p style="margin: 0; margin-bottom: 24px;">콩팥(Kidney), 이름처럼 콩과 팥을 닮은 장기.<br>한자로는 '신장(腎臟)'이라고도 불리지만,<br>요즘은 <strong>'콩팥'이라는 순우리말</strong>을 더 많이 사용합니다.<br>‘신부전’도 이제는 일상에서 ‘콩팥병’으로 부르는 추세입니다.</p>
-																	<p style="margin: 0;">&nbsp;콩팥, 얼마나 알고 계신가요?</p>
+																<div class="alignment" align="center"><!--[if mso]>
+<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word"   style="height:124px;width:878px;v-text-anchor:middle;" arcsize="4%" fillcolor="#ffffff">
+<v:stroke dashstyle="Solid" weight="1px" color="#000000"/>
+<w:anchorlock/>
+<v:textbox inset="0px,0px,0px,0px">
+<center dir="false" style="color:#000000;font-family:sans-serif;font-size:19px">
+<![endif]--><span class="button" style="background-color: #ffffff; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-radius: 4px; border-right: 1px solid #000000; border-top: 1px solid #000000; color: #000000; display: inline-block; font-family: Arial, Helvetica, sans-serif; font-size: 19px; font-weight: 400; mso-border-alt: none; padding-bottom: 5px; padding-top: 5px; padding-left: 20px; padding-right: 20px; text-align: center; width: auto; word-break: keep-all; letter-spacing: normal;"><span style="word-break: break-word; line-height: 38px;">콩팥(Kidney), 이름처럼 콩과 팥을 닮은 장기.한자로는 '신장(腎臟)'이라고도 불리지만,요즘은 <strong>'콩팥'이라는 순우리말</strong>을 더 많이 사용합니다.‘신부전’도 이제는 일상에서 ‘콩팥병’으로 부르는 추세입니다. &nbsp;<br><strong>콩팥, 얼마나 알고 계신가요?</strong></span></span><!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-4" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="divider_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad">
+																<div class="alignment" align="center">
+																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+																		<tr>
+																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 1px solid #dddddd;"><span style="word-break: break-word;">&#8202;</span></td>
+																		</tr>
+																	</table>
 																</div>
 															</td>
 														</tr>
@@ -198,19 +229,56 @@
 													<table class="paragraph_block block-3" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:left;mso-line-height-alt:24px;">
-																	<p style="margin: 0; margin-bottom: 24px;">위치: 좌우 각각 1개씩, 횡격막 아래 등 쪽 복막 뒤</p>
-																	<p style="margin: 0; margin-bottom: 24px;">크기: 길이 약 11~12cm, 무게는 양쪽 합쳐 300g</p>
-																	<p style="margin: 0; margin-bottom: 24px;">모양: 강낭콩 형태</p>
-																	<p style="margin: 0; margin-bottom: 24px;">별명: <strong>우리 몸의 ‘배터리’</strong></p>
-																	<p style="margin: 0; margin-bottom: 24px;">콩팥의 핵심 기능</p>
-																	<p style="margin: 0; margin-bottom: 24px;"><strong>노폐물 제거</strong><br>→ 혈액 속 노폐물을 걸러 소변으로 배출</p>
-																	<p style="margin: 0; margin-bottom: 24px;"><strong>항상성 유지</strong><br>→ 체내 상태를 일정하게 유지</p>
-																	<p style="margin: 0; margin-bottom: 24px;"><strong>호르몬·효소 분비</strong><br>→ 혈압 조절·적혈구 생성 등</p>
-																	<p style="margin: 0; margin-bottom: 24px;"><strong>삼투압 조절</strong><br>→ 물과 전해질 균형 유지</p>
-																	<p style="margin: 0; margin-bottom: 24px;"><strong>혈압 조절</strong><br>→ 혈류량 조절을 통해 관리</p>
-																	<p style="margin: 0; margin-bottom: 24px;">&nbsp;</p>
-																	<p style="margin: 0;"><strong>주의!</strong><br>콩팥은 <strong>한 번 손상되면 회복이 어렵습니다.</strong><br>자연치유가 되지 않기 때문에, 평소 관리가 무엇보다 중요합니다.</p>
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:23px;">
+																	<p style="margin: 0; margin-bottom: 16px;">위치: <strong>좌우 각각 1개씩, 횡격막 아래 등 쪽 복막 뒤</strong></p>
+																	<p style="margin: 0; margin-bottom: 16px;">크기: 길<strong>이 약 11~12cm, 무게는 양쪽 합쳐 300g</strong></p>
+																	<p style="margin: 0; margin-bottom: 16px;">모양: <strong>강낭콩 형태</strong></p>
+																	<p style="margin: 0;">별명: <strong>우리 몸의 ‘배터리’</strong></p>
+																</div>
+															</td>
+														</tr>
+													</table>
+													<table class="divider_block block-4" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad">
+																<div class="alignment" align="center">
+																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+																		<tr>
+																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 1px solid #dddddd;"><span style="word-break: break-word;">&#8202;</span></td>
+																		</tr>
+																	</table>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-5" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<tr>
+															<td class="pad">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.7;text-align:left;mso-line-height-alt:34px;">
+																	<p style="margin: 0; margin-bottom: 10px;"><strong>콩팥의 </strong><u><strong>핵심 기능</strong></u></p>
+																	<p style="margin: 0; margin-bottom: 10px;"><strong>노폐물 제거</strong><br>→ 혈액 속 노폐물을 걸러 소변으로 배출</p>
+																	<p style="margin: 0; margin-bottom: 10px;"><strong>항상성 유지</strong><br>→ 체내 상태를 일정하게 유지</p>
+																	<p style="margin: 0; margin-bottom: 10px;"><strong>호르몬·효소 분비</strong><br>→ 혈압 조절·적혈구 생성 등</p>
+																	<p style="margin: 0; margin-bottom: 10px;"><strong>삼투압 조절</strong><br>→ 물과 전해질 균형 유지</p>
+																	<p style="margin: 0; margin-bottom: 10px;"><strong>혈압 조절</strong><br>→ 혈류량 조절을 통해 관리</p>
+																	<p style="margin: 0; margin-bottom: 10px;"><strong>주의!</strong></p>
+																	<p style="margin: 0;">콩팥은 <strong>한 번 손상되면 회복이 어렵습니다.</strong><br>자연치유가 되지 않기 때문에, 평소 관리가 무엇보다 중요합니다.</p>
 																</div>
 															</td>
 														</tr>
