--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; color: #000000; width: 900px; margin: 0 auto;" width="900">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; background-color: #f8f8f8; width: 900px; margin: 0 auto;" width="900">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top;">
@@ -140,7 +140,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; background-color: #f8f8f8; border-radius: 1px 0 0; width: 900px; margin: 0 auto;" width="900">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="25%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; border-left: 27px solid transparent; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; padding-top: 5px; vertical-align: top;">
@@ -151,7 +151,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:15px;width:100%;">
 																<div class="alignment" align="left">
-																	<div style="max-width: 450px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/wqz/wxu/qb5/image%20418.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="450" alt title height="auto"></div>
+																	<div style="max-width: 450px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/wqz/wxu/qb5/image%20418.jpg" style="display: block; height: auto; border: 0; width: 100%; border-radius: 22px;" width="450" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
@@ -226,31 +226,6 @@
 															</td>
 														</tr>
 													</table>
-													<table class="paragraph_block block-3" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
-														<tr>
-															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:23px;">
-																	<p style="margin: 0; margin-bottom: 16px;">위치: <strong>좌우 각각 1개씩, 횡격막 아래 등 쪽 복막 뒤</strong></p>
-																	<p style="margin: 0; margin-bottom: 16px;">크기: 길<strong>이 약 11~12cm, 무게는 양쪽 합쳐 300g</strong></p>
-																	<p style="margin: 0; margin-bottom: 16px;">모양: <strong>강낭콩 형태</strong></p>
-																	<p style="margin: 0;">별명: <strong>우리 몸의 ‘배터리’</strong></p>
-																</div>
-															</td>
-														</tr>
-													</table>
-													<table class="divider_block block-4" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td class="pad">
-																<div class="alignment" align="center">
-																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-																		<tr>
-																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 1px solid #dddddd;"><span style="word-break: break-word;">&#8202;</span></td>
-																		</tr>
-																	</table>
-																</div>
-															</td>
-														</tr>
-													</table>
 												</td>
 											</tr>
 										</tbody>
@@ -263,6 +238,114 @@
 						<tbody>
 							<tr>
 								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff; color: #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-radius: 15px; border-right: 1px solid #000000; border-top: 1px solid #000000; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<tr>
+															<td class="pad">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:23px;">
+																	<p style="margin: 0; margin-bottom: 16px;">위치: <strong>좌우 각각 1개씩, 횡격막 아래 등 쪽 복막 뒤</strong></p>
+																	<p style="margin: 0; margin-bottom: 16px;">크기: 길<strong>이 약 11~12cm, 무게는 양쪽 합쳐 300g</strong></p>
+																	<p style="margin: 0; margin-bottom: 16px;">모양: <strong>강낭콩 형태</strong></p>
+																	<p style="margin: 0;">별명: <strong>우리 몸의 ‘배터리’</strong></p>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-6" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="divider_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad">
+																<div class="alignment" align="center">
+																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+																		<tr>
+																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 1px solid #dddddd;"><span style="word-break: break-word;">&#8202;</span></td>
+																		</tr>
+																	</table>
+																</div>
+															</td>
+														</tr>
+													</table>
+													<table class="paragraph_block block-2" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<tr>
+															<td class="pad">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:28px;">
+																	<p style="margin: 0;"><strong>콩팥의 </strong><strong>핵심 기능</strong></p>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-7" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="25%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<div class="spacer_block block-1" style="height:60px;line-height:60px;font-size:1px;">&#8202;</div>
+												</td>
+												<td class="column column-2" width="25%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;">
+																<div class="alignment" align="center">
+																	<div style="max-width: 146px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/0qg/qf1/k12/image%20426.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="146" alt title height="auto"></div>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="column column-3" width="25%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;">
+																<div class="alignment" align="center">
+																	<div style="max-width: 146px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/t2k/npl/xjl/image%20427.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="146" alt title height="auto"></div>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="column column-4" width="25%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<div class="spacer_block block-1" style="height:60px;line-height:60px;font-size:1px;">&#8202;</div>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-8" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
 									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
 										<tbody>
 											<tr>
@@ -270,14 +353,85 @@
 													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.7;text-align:left;mso-line-height-alt:34px;">
-																	<p style="margin: 0; margin-bottom: 10px;"><strong>콩팥의 </strong><u><strong>핵심 기능</strong></u></p>
-																	<p style="margin: 0; margin-bottom: 10px;"><strong>노폐물 제거</strong><br>→ 혈액 속 노폐물을 걸러 소변으로 배출</p>
-																	<p style="margin: 0; margin-bottom: 10px;"><strong>항상성 유지</strong><br>→ 체내 상태를 일정하게 유지</p>
-																	<p style="margin: 0; margin-bottom: 10px;"><strong>호르몬·효소 분비</strong><br>→ 혈압 조절·적혈구 생성 등</p>
-																	<p style="margin: 0; margin-bottom: 10px;"><strong>삼투압 조절</strong><br>→ 물과 전해질 균형 유지</p>
-																	<p style="margin: 0; margin-bottom: 10px;"><strong>혈압 조절</strong><br>→ 혈류량 조절을 통해 관리</p>
-																	<p style="margin: 0; margin-bottom: 10px;"><strong>주의!</strong></p>
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:24px;">
+																	<p style="margin: 0;"><strong>&nbsp; &nbsp;노폐물 제거 </strong>→&nbsp; <strong>혈액 속 노폐물을 걸러 소변으로 배출</strong></p>
+																</div>
+															</td>
+														</tr>
+													</table>
+													<table class="image_block block-2" width="100%" border="0" cellpadding="25" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad">
+																<div class="alignment" align="center">
+																	<div class="fullWidth" style="max-width: 360px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/7q4/cg0/eyq/Frame%205477.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="360" alt title height="auto"></div>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-9" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff; color: #000000; border-bottom: 2px solid #280000; border-left: 2px solid #280000; border-radius: 39px; border-right: 2px solid #280000; border-top: 2px solid #280000; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-left: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="25" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<tr>
+															<td class="pad">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:24px;">
+																	<p style="margin: 0; margin-bottom: 16px;"><strong>항상성 유지 </strong>→ 체내 상태를 일정하게 유지 , <strong>호르몬·효소 분비 </strong>→ 혈압 조절·적혈구 생성 등</p>
+																	<p style="margin: 0;"><strong>삼투압 조절 </strong>→ 물과 전해질 균형 유지 , <strong>혈압 조절 </strong>→ 혈류량 조절을 통해 관리</p>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-10" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f8f8f8; border-radius: 0; color: #000000; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<div class="spacer_block block-1" style="height:35px;line-height:35px;font-size:1px;">&#8202;</div>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-11" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff; color: #000000; border-bottom: 3px solid #ee5656; border-left: 3px solid #ee5656; border-radius: 9px; border-right: 3px solid #ee5656; border-top: 3px solid #ee5656; width: 900px; margin: 0 auto;" width="900">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; border-bottom: 1px solid #ffffff; border-left: 1px solid #ffffff; border-right: 1px solid #ffffff; border-top: 1px solid #ffffff; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
+													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<tr>
+															<td class="pad">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:23px;">
+																	<p style="margin: 0; margin-bottom: 16px;"><strong>주의!</strong></p>
 																	<p style="margin: 0;">콩팥은 <strong>한 번 손상되면 회복이 어렵습니다.</strong><br>자연치유가 되지 않기 때문에, 평소 관리가 무엇보다 중요합니다.</p>
 																</div>
 															</td>
